11.Allow to run analysis, compiled into library, from the gui. 
   Example simple, 1step and 2step shows how it can be done. From this point on
   it is no longer necessary to have MainUserAnalysis executable at all.
12.Signal handler is used to normally stop analysis by Ctrl-C
   pressing from the user - stop processing, close connections, 
   save autosave file.


Changes in Go4 v4.3.1 (August 09)
1. Fix error with connecting DABC/MBS servers second time
2. Fix error with using autosave files - object was not found correctly there
3. Set green/red color in analysis status monitor widget
4. In qt3 version exclude all 3 gui libraries, integrating code in executable (similar to qt4)
5. Suppress symbolic links in user gui library to avoid compilation problem
   on DOS partitions, where links are not supported
6. Set in gStyle pad frame color
7. Workaround for TCutG API changes in ROOT 5.25.1 and further         

Changes in Go4 v4.3.0 (June 09)
1. Remove Q3Support classes completely - now Qt4 based GUI is 
   pure Qt4 application. This solves many side effects like crash
   by style changing or blinking during resize of main window.
   From this version on Qt4 GUI is default. 
2. rootmap files are generated per library - this simplifies make 
   procedure significantly, old user makefiles are still working
3. Go4 makefile now can better recognize standard installed Qt version
   without QTDIR set. 'make WITHQT=3' or 'make WITHQT=4' forces usage of 
   specified Qt version.
4. Fix problem with drawing of THStack from canvas or file. 
5. Add proxy for THStack to be able browse into THStack and 
   draw single histograms from it 
6. Better autoscale of THStack class
7. Ensure that drawing of histogram first time done only once,
   in case of 2D histograms doubles the performance
8. When running GUI, one can specify one or several root files,
   which will be loaded automatically
9. BUGFIX: GUI was hanging when non-existing hotstart file was specified.